force-app/main/default/objects/Opportunity/fields/AppointedDayCalculation__c.field-meta.xml
<CustomField>
    <fullName>AppointedDayCalculation__c</fullName>
    <label>Appointed Day Calculation</label>
    <type>Date</type>
</CustomField>