force-app/main/default/objects/Opportunity/fields/CalculationTimePoint__c.field-meta.xml
<CustomField>
    <fullName>CalculationTimePoint__c</fullName>
    <defaultValue>&quot;Monthly&quot;</defaultValue>
    <label>Time reference calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>