force-app/main/default/objects/Opportunity/fields/DateOf_Payment__c.field-meta.xml
<CustomField>
    <fullName>DateOf_Payment__c</fullName>
    <label>Date of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTerms</valueSetName>
    </valueSet>
</CustomField>