force-app/main/default/objects/Opportunity/fields/DateofPayment__c.field-meta.xml
<CustomField>
    <fullName>DateofPayment__c</fullName>
    <label>Date of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTerms</valueSetName>
    </valueSet>
</CustomField>