force-app/main/default/objects/Opportunity/fields/DateOfReceipt__c.field-meta.xml
<CustomField>
    <fullName>DateOfReceipt__c</fullName>
    <label>Date of Receipt</label>
    <type>Date</type>
</CustomField>