force-app/main/default/objects/Opportunity/fields/FinalCheckStartDate__c.field-meta.xml
<CustomField>
    <fullName>FinalCheckStartDate__c</fullName>
    <label>Final Check Start Date</label>
    <type>DateTime</type>
</CustomField>