force-app/main/default/objects/Opportunity/fields/FinalChecktoOfferDuration__c.field-meta.xml
<CustomField>
    <fullName>FinalChecktoOfferDuration__c</fullName>
    <formula>DATETIMEVALUE(QuoteOfferedDate__c) -  DATETIMEVALUE(FinalCheckStartDate__c)</formula>
    <label>Final Check to Offer Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>