force-app/main/default/objects/Opportunity/fields/FollowUpDate__c.field-meta.xml
<CustomField>
    <fullName>FollowUpDate__c</fullName>
    <label>Follow Up Date </label>
    <type>Date</type>
</CustomField>