force-app/main/default/objects/Opportunity/fields/InquiryToOpptyCreationDuration__c.field-meta.xml
<CustomField>
    <fullName>InquiryToOpptyCreationDuration__c</fullName>
    <formula>DATETIMEVALUE(CreatedDate)- DATETIMEVALUE(DateOfReceipt__c)</formula>
    <label>Inquiry To Opportunity Creation Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>