force-app/main/default/objects/Opportunity/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer does not provide information</fullName>
            </value>
            <value>
                <fullName>Customer service</fullName>
            </value>
            <value>
                <fullName>Delivery reliability/ Delivery time</fullName>
            </value>
            <value>
                <fullName>Cover</fullName>
                <label>Insufficient financial coverage</label>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Minimum order quantity</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Product price</fullName>
            </value>
            <value>
                <fullName>Quality from customers point of view</fullName>
                <label>Quality from customer&apos;s point of view</label>
            </value>
            <value>
                <fullName>Techn. deviations</fullName>
            </value>
            <value>
                <fullName>Techn. feasibility/ Delivery program alloy</fullName>
            </value>
            <value>
                <fullName>Techn. feasibility/ Delivery program dimension</fullName>
            </value>
            <value>
                <fullName>Techn. feasibility/ Delivery program product format</fullName>
            </value>
            <value>
                <fullName>Transportation and Handling costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>