force-app/main/default/objects/Opportunity/fields/OpportunityAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAutoNumber__c</fullName>
    <label>Opportunity Auto Number</label>
    <type>AutoNumber</type>
</CustomField>