force-app/main/default/objects/Opportunity/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <formula>(RIGHT(TEXT(YEAR( DATEVALUE( CreatedDate )) ), 2)  &amp; &apos;-&apos; &amp; OpportunityAutoNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>