force-app/main/default/objects/Opportunity/fields/OpportunityNumberCustomer__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumberCustomer__c</fullName>
    <label>Opportunity Number Customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>