force-app/main/default/objects/Opportunity/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <description>Type of inquiry</description>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OpportunityType</valueSetName>
    </valueSet>
</CustomField>