force-app/main/default/objects/Opportunity/fields/ProductManager__c.field-meta.xml
<CustomField>
    <fullName>ProductManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>