force-app/main/default/objects/Opportunity/fields/QualityCheckStartDate__c.field-meta.xml
<CustomField>
    <fullName>QualityCheckStartDate__c</fullName>
    <label>Quality Check Start Date</label>
    <type>DateTime</type>
</CustomField>