force-app/main/default/objects/Opportunity/fields/QualityCheckTotalDuration__c.field-meta.xml
<CustomField>
    <fullName>QualityCheckTotalDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quality Check Total Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>