force-app/main/default/objects/Opportunity/fields/QualityDepartment__c.field-meta.xml
<CustomField>
    <fullName>QualityDepartment__c</fullName>
    <formula>IF(OR(ISPICKVAL(BusinessArea__c, &apos;ZK&apos;),ISPICKVAL(BusinessArea__c, &apos;ZF&apos;),ISPICKVAL(BusinessArea__c, &apos;ZS&apos;)) , &apos;620 - Neunkirchen&apos;, 
IF(ISPICKVAL(BusinessArea__c, &apos;ZZ&apos;),&apos;473 - Burbach&apos;,
IF(OR(ISPICKVAL(BusinessArea__c, &apos;ZW&apos;),ISPICKVAL(BusinessArea__c, &apos;ZM&apos;)) , &apos;460 - Nauweiler&apos;, 
NULL)))</formula>
    <label>Quality Department</label>
    <type>Text</type>
</CustomField>