force-app/main/default/objects/Opportunity/fields/QualityManager__c.field-meta.xml
<CustomField>
    <fullName>QualityManager__c</fullName> 
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Manager</label> 
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>