force-app/main/default/objects/Opportunity/fields/QualityRep__c.field-meta.xml
<CustomField>
    <fullName>QualityRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>