force-app/main/default/objects/Opportunity/fields/QuoteOfferedDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteOfferedDate__c</fullName>
    <inlineHelpText>The date on which the first active Quote is set to Offered.</inlineHelpText>
    <label>Quote Offered Date</label>
    <type>DateTime</type>
</CustomField>