force-app/main/default/objects/Opportunity/fields/QuoteValidTill__c.field-meta.xml
<CustomField>
    <fullName>QuoteValidTill__c</fullName>
    <label>Quote valid till</label>
    <type>Date</type>
</CustomField>