force-app/main/default/objects/Opportunity/fields/RMUDcheck__c.field-meta.xml
<CustomField>
    <fullName>RMUDcheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RMUDcheck</label>
    <type>Checkbox</type>
</CustomField>