force-app/main/default/objects/Opportunity/fields/SalesDepartment__c.field-meta.xml
<CustomField>
    <fullName>SalesDepartment__c</fullName>
    <label>Sales Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>330</fullName>
            </value>
            <value>
                <fullName>320</fullName>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>