force-app/main/default/objects/Opportunity/fields/SuccessorCustomer__c.field-meta.xml
<CustomField>
    <fullName>SuccessorCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Predecessor Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>