force-app/main/default/objects/Opportunity/fields/TotalOLIs__c.field-meta.xml
<CustomField>
    <fullName>TotalOLIs__c</fullName>
    <label>Total OLIs</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>