force-app/main/default/objects/Opportunity/fields/UsePricingTool__c.field-meta.xml
<CustomField>
    <fullName>UsePricingTool__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Pricing Tool</label> 
    <type>Checkbox</type>
</CustomField>