force-app/main/default/objects/Opportunity/recordTypes/Opportunitywithquotecreations.recordType-meta.xml
<RecordType>
    <fullName>Opportunitywithquotecreations</fullName>
    <active>true</active>
    <businessProcess>Full Opportunity Process</businessProcess>
    <label>Opportunity with quote creations</label>
</RecordType>