force-app/main/default/objects/Opportunity/recordTypes/PriceIndicationwithoutquote.recordType-meta.xml
<RecordType>
    <fullName>PriceIndicationwithoutquote</fullName>
    <active>true</active>
    <businessProcess>Light Opportunity process</businessProcess>
    <label>Price Indication without quote</label>
</RecordType>