force-app/main/default/objects/Opportunity/validationRules/AppointedDayShouldNotBeGreaterThan12RMUD.validationRule-meta.xml
<ValidationRule>
    <fullName>AppointedDayShouldNotBeGreaterThan12RMUD</fullName>
    <active>true</active>
    <errorConditionFormula>IF(RMUDcheck__c, true, false)</errorConditionFormula>
    <errorMessage>The value for &quot;Appointed Day Calculation&quot; must be within 12 months since the last raw material update.</errorMessage>
</ValidationRule>