force-app/main/default/objects/Opportunity/validationRules/ValidateAccountName.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateAccountName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( AccountId ),
NOT( $Setup.ByPassLogic__c.ByPassValidation__c ))</errorConditionFormula>
    <errorMessage>Opportunities can only be saved if an affiliated account is entered in the field &quot;Account Name&quot;.</errorMessage>
</ValidationRule>