force-app/main/default/objects/Opportunity/validationRules/ValidateMandatoryFieldsOnOpportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateMandatoryFieldsOnOpportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Opportunitywithquotecreations&quot;,OR(
ISBLANK(TEXT(OpportunityType__c)),ISBLANK(TEXT(BusinessArea__c)),
ISBLANK(DateOfReceipt__c),ISBLANK(TEXT(ChannelOfDistribution__c)),ISBLANK(TEXT(CurrencyIsoCode)),ISBLANK(TEXT(Type))),NOT( $Setup.ByPassLogic__c.ByPassValidation__c ))</errorConditionFormula>
    <errorMessage>Please specify all of the following mandatory fields: Opportunity Type, Business Area, Date Of Receipt, Channel Of Distribution, Currency Iso Code and Type.</errorMessage>
</ValidationRule>