force-app/main/default/objects/Opportunity/validationRules/ValidateOppCountry.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateOppCountry</fullName>
    <active>true</active>
    <errorConditionFormula>AND(BlockedCountry__c, 
NOT( $Setup.ByPassLogic__c.ByPassValidation__c ))</errorConditionFormula>
    <errorMessage>You cannot create opportunities from a blocked country.</errorMessage>
</ValidationRule>