force-app/main/default/objects/Opportunity/validationRules/ValidationForClosedStageOnLightOpty.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationForClosedStageOnLightOpty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
AND(
 $User.Id = OwnerId,
 ISCHANGED( StageName ),
 PRIORVALUE( IsClosed ) = True,
 NOT(ISPICKVAL( StageName, &quot;Open&quot;)),
 RecordType.DeveloperName=&apos;PriceIndicationwithoutquote&apos;
),
AND(
 $User.Id &lt;&gt; OwnerId,
 ISCHANGED( StageName ),
 PRIORVALUE( IsClosed ) = True,
 RecordType.DeveloperName=&apos;PriceIndicationwithoutquote&apos;
 )
),
NOT($Setup.ByPassLogic__c.ByPassValidation__c )
)</errorConditionFormula>
    <errorMessage>This opportunity is already in &quot;Closed&quot; status. Only the owner can set the opportunity back to &quot;Open&quot;.</errorMessage>
</ValidationRule>